--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ tqdm >= 4.65.0
 black >= 23.1.0
 isort >= 5.12.0
 pandas >= 1.5.3
-matplotlib >= 3.7.1
+matplotlib == 3.5.1
 scipy >= 1.10.1
 jupyter
 notebook
