--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ isort >= 5.12.0
 pandas >= 1.5.3
 matplotlib == 3.5.1
 scipy >= 1.10.1
+huggingface-hub==0.4.0
+sentence-transformers == 2.2.0
 jupyter
 notebook
